remove send paths
