# src/api/swagger.yml
@@ -523,106 +523,6 @@
             schema: 
               $ref: "#/definitions/ErrorModel"
 
-    # ==========
-    # ETH
-    # ==========
-
-    /eth/wallet/send-coins:
-      post: 
-        tags: 
-          - ETH - wallet
-        description: Sends eth.
-        produces: 
-          - application/json
-        parameters:
-          - 
-            name: Authentication
-            in: header
-            required: true
-            type: string
-          - 
-            name: address
-            in: body
-            required: true
-            type: string
-          - 
-            name: amount
-            in: body
-            required: true
-            type: string
-          - 
-            name: data
-            in: body
-            required: false
-            type: string
-          - 
-            name: prvKey
-            in: body
-            required: false
-            type: string
-        responses: 
-          "200":
-            schema: 
-              type: object
-              properties: 
-                data:
-                  type: object
-                  properties:
-                    success: 
-                      type: string
-          default: 
-            description: unexpected error
-            schema: 
-              $ref: "#/definitions/ErrorModel"
-
-    /eth/wallet/send-tokens:
-      post: 
-        tags: 
-          - ETH - wallet
-        description: Sends tokens.
-        produces: 
-          - application/json
-        parameters:
-          - 
-            name: Authentication
-            in: header
-            required: true
-            type: string
-          - 
-            name: address
-            in: body
-            required: true
-            type: string
-          - 
-            name: contractAddress
-            in: body
-            required: true
-            type: string
-          - 
-            name: amount
-            in: body
-            required: true
-            type: string
-          - 
-            name: prvKey
-            in: body
-            required: false
-            type: string
-        responses: 
-          "200":
-            schema: 
-              type: object
-              properties: 
-                data:
-                  type: object
-                  properties:
-                    success: 
-                      type: string
-          default: 
-            description: unexpected error
-            schema: 
-              $ref: "#/definitions/ErrorModel"
-
   # ==========
   # MODELS
   # ==========
